--- a/CICD.Mvc/Views/Home/Index.cshtml
+++ b/CICD.Mvc/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 
 <div class="text-center">
     <div class="alert alert-info">
-        <h1 class="display-4">Stringcalculator live op Heroku?</h1>
+        <h1 class="display-4">Stringcalculator live op Heroku! <strong>YES!!!!</strong></h1>
     </div>
     <form asp-controller="Home" asp-action="Index" method="post">
         <input type="text" asp-for="Input" value="@Model.Input" />
