--- a/CICD.Mvc/Views/Home/Index.cshtml
+++ b/CICD.Mvc/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 <div class="text-center">
     <div class="alert alert-info">
         <h1 class="display-4">Stringcalculator live op Heroku! <strong>YES!!!!</strong></h1>
+        <p>featuring Drieze, viewed by wilschok ;)</p>
     </div>
     <form asp-controller="Home" asp-action="Index" method="post">
         <input type="text" asp-for="Input" value="@Model.Input" />
